Actualizado el archivo README

--- a/notebooks/airbnb_Madrid.ipynb
+++ b/notebooks/airbnb_Madrid.ipynb
@@ -14735,6 +14735,60 @@
     "\n",
     "display(Image(filename=\"../docs/correlaciones_reviews.png\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Análisis de precios de Airbnb en Madrid\n",
+      "  - Objetivo del proyecto\n",
+      "  - Metodología\n",
+      "- 0. Librerías\n",
+      "- 1. Datos\n",
+      "- 2. Requisitos de cliente\n",
+      "- 3. Análisis geográfico\n",
+      "  - ¿Cómo influye en los precios la distancia a Sol?\n",
+      "  - ¿Cómo varía el precio según el barrio?\n",
+      "- 4. Análisis inmueble\n",
+      "  - ¿Qué características tienen los pisos con precios óptimos\n",
+      "  - ¿Qué comodidades tienen los pisos con precio óptimo?\n",
+      "- 5. Análisis contractual\n",
+      "- 6. Análisis de reseñas de clientes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
+    "# Cargar el notebook\n",
+    "with open('airbnb_Madrid.ipynb', 'r', encoding='utf-8') as file:\n",
+    "    notebook = json.load(file)\n",
+    "\n",
+    "# Extraer títulos de las celdas markdown\n",
+    "titulos = []\n",
+    "for celda in notebook['cells']:\n",
+    "    # Verificar si es una celda markdown\n",
+    "    if celda['cell_type'] == 'markdown':\n",
+    "        contenido = ''.join(celda['source'])\n",
+    "        # Buscar líneas que comiencen con # (títulos markdown)\n",
+    "        lineas = contenido.split('\\n')\n",
+    "        for linea in lineas:\n",
+    "            match = re.match(r'^(#{1,6})\\s+(.+)$', linea)\n",
+    "            if match:\n",
+    "                nivel = len(match.group(1))\n",
+    "                texto = match.group(2)\n",
+    "                titulos.append((nivel, texto))\n",
+    "\n",
+    "# Mostrar los títulos encontrados\n",
+    "for nivel, texto in titulos:\n",
+    "    print(f\"{'  ' * (nivel-1)}- {texto}\")"
+   ]
   }
  ],
  "metadata": {
