--- a/Documentación_airbnb_Madrid.ipynb
+++ b/Documentación_airbnb_Madrid.ipynb
@@ -46,6 +46,122 @@
     "\n",
     "---\n",
     "\n",
+    "### <span style=\"color: #ff385c;\">df_location (21,020 filas, 7 columnas)</span>\n",
+    "\n",
+    "Datos de ubicación geográfica y relación con el entorno.\n",
+    "\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `id` | int64 | Identificador único del alojamiento |\n",
+    "| `neighbourhood` | object | Barrio (nivel detallado) |\n",
+    "| `neighbourhood_group` | object | Distrito (nivel agregado) |\n",
+    "| `latitude` | float64 | Latitud geográfica |\n",
+    "| `longitude` | float64 | Longitud geográfica |\n",
+    "| `dist_km_sol` | float64 | Distancia en km a la Puerta del Sol |\n",
+    "| `dist_km_airport` | float64 | Distancia en km al aeropuerto |\n",
+    "\n",
+    "**Notas**: No hay valores nulos en este dataframe.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### <span style=\"color: #ff385c;\">df_property (21,020 filas, 13 columnas)</span>\n",
+    "\n",
+    "Características físicas y descriptivas de las propiedades.\n",
+    "\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `id` | int64 | Identificador único del alojamiento |\n",
+    "| `property_type` | object | Tipo de propiedad (apartamento, casa, etc.) |\n",
+    "| `room_type` | object | Tipo de habitación (entire_home_apt, private_room, etc.) |\n",
+    "| `accommodates` | int64 | Capacidad máxima de personas |\n",
+    "| `bathrooms` | float64 | Número de baños |\n",
+    "| `bedrooms` | float64 | Número de dormitorios |\n",
+    "| `beds` | float64 | Número de camas |\n",
+    "| `bed_type` | object | Tipo de cama (real_bed, etc.) |\n",
+    "| `amenities_wifi_internet` | int64 | Disponibilidad de WiFi/Internet (0/1) |\n",
+    "| `amenities_tv` | int64 | Disponibilidad de televisión (0/1) |\n",
+    "| `amenities_air_conditioning` | int64 | Disponibilidad de aire acondicionado (0/1) |\n",
+    "| `amenities_heating` | int64 | Disponibilidad de calefacción (0/1) |\n",
+    "| `amenities_kitchen` | int64 | Disponibilidad de cocina (0/1) |\n",
+    "\n",
+    "**Notas**: No hay valores nulos en este dataframe.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### <span style=\"color: #ff385c;\">df_reviews (21,020 filas, 16 columnas)</span>\n",
+    "\n",
+    "Información sobre valoraciones y reseñas de los huéspedes.\n",
+    "\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `id` | int64 | Identificador único del alojamiento |\n",
+    "| `number_of_reviews` | int64 | Cantidad total de reseñas |\n",
+    "| `number_of_reviews_ltm` | int64 | Cantidad de reseñas en los últimos 12 meses |\n",
+    "| `review_scores_rating` | float64 | Puntuación general (0-100) |\n",
+    "| `review_scores_accuracy` | float64 | Puntuación en precisión (0-10) |\n",
+    "| `review_scores_cleanliness` | float64 | Puntuación en limpieza (0-10) |\n",
+    "| `review_scores_checkin` | float64 | Puntuación en proceso de check-in (0-10) |\n",
+    "| `review_scores_communication` | float64 | Puntuación en comunicación (0-10) |\n",
+    "| `review_scores_location` | float64 | Puntuación en ubicación (0-10) |\n",
+    "| `review_scores_value` | float64 | Puntuación en relación calidad-precio (0-10) |\n",
+    "| `reviews_per_month` | float64 | Promedio de reseñas por mes |\n",
+    "| `days_since_last_review` | int64 | Días transcurridos desde la última reseña |\n",
+    "| `days_since_first_review` | int64 | Días transcurridos desde la primera reseña |\n",
+    "| `number_of_reviews_en` | float64 | Número de reseñas en inglés |\n",
+    "| `number_of_reviews_es` | float64 | Número de reseñas en español |\n",
+    "| `number_of_reviews_otros` | float64 | Número de reseñas en otros idiomas |\n",
+    "\n",
+    "**Notas**: Hay valores nulos considerables en las columnas de puntuaciones (~4,294) y en las columnas relacionadas con reseñas mensuales e idiomas (4,038).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### <span style=\"color: #ff385c;\">df_host (21,020 filas, 13 columnas)</span>\n",
+    "\n",
+    "Información detallada sobre los anfitriones.\n",
+    "\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `id` | int64 | Identificador único del alojamiento |\n",
+    "| `host_response_time` | object | Tiempo promedio de respuesta del anfitrión |\n",
+    "| `host_response_rate` | float64 | Porcentaje de mensajes respondidos |\n",
+    "| `host_is_superhost` | int64 | Si el anfitrión tiene estatus de Superhost (0/1) |\n",
+    "| `host_has_profile_pic` | int64 | Si el anfitrión tiene foto de perfil (0/1) |\n",
+    "| `host_identity_verified` | int64 | Si la identidad del anfitrión está verificada (0/1) |\n",
+    "| `host_verifications_email` | int64 | Si el anfitrión ha verificado su email (0/1) |\n",
+    "| `host_verifications_phone` | int64 | Si el anfitrión ha verificado su teléfono (0/1) |\n",
+    "| `host_verifications_reviews` | int64 | Si el anfitrión ha verificado con reseñas (0/1) |\n",
+    "| `host_verifications_facebook` | int64 | Si el anfitrión ha verificado con Facebook (0/1) |\n",
+    "| `host_verifications_government_id` | int64 | Si el anfitrión ha verificado con identificación oficial (0/1) |\n",
+    "| `calculated_host_listings_count` | int64 | Número total de propiedades del anfitrión |\n",
+    "| `host_seniority` | int64 | Antigüedad del anfitrión en días |\n",
+    "\n",
+    "**Notas**: Hay 4,464 valores nulos en `host_response_time` y `host_response_rate`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## <span style=\"color: #ff385c;\">Estadísticas Básicas</span>\n",
+    "\n",
+    "### <span style=\"color: #ff385c;\">Tamaño de los Datasets</span>\n",
+    "\n",
+    "| Dataframe | Filas | Columnas |\n",
+    "|-----------|-------|----------|\n",
+    "| df_conditions | 21,020 | 7 |\n",
+    "| df_location | 21,020 | 7 |\n",
+    "| df_property | 21,020 | 13 |\n",
+    "| df_reviews | 21,020 | 16 |\n",
+    "| df_host | 21,020 | 13 |\n",
+    "\n",
+    "## <span style=\"color: #ff385c;\">Notas Técnicas</span>\n",
+    "\n",
+    "- Todos los dataframes comparten la columna `id` como clave única para unir los datos.\n",
+    "- No hay filas duplicadas en ninguno de los dataframes.\n",
+    "- Las variables booleanas están codificadas como 0/1 (tipo int64).\n",
+    "- Los datos de reseñas tienen valores faltantes significativos, especialmente para propiedades sin reseñas.\n",
+    "- Valores -1 en días_since_last_review y days_since_first_review probablemente indican propiedades sin reseñas.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
     "## <span style=\"color: #ff385c;\">Preprocesamiento de Datos</span>\n",
     "\n",
     "### <span style=\"color: #ff385c;\">1. Unión de Datos</span>\n",
